adding changed UI and redis debug